--- a/website/home.html
+++ b/website/home.html
@@ -131,15 +131,8 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>25.dec.23 - finished my <a href="music/recaps/2023/index.html">music recap</a> of the year! this will be my last update of the year! happy holidays everyone <img src="!g/pix/crismas.gif" alt=""></li>
 			<li>22.dec.23 - <a href="/journal">journal log</a></li>
-			<li>21.dec.23 - reworking <a title="still a WIP but it's better than nothing" href="/art">art</a> page</li>
-			<li>18.dec.23 - <a href="journal/2023/12.html#18">journal log</a>: university admission accepted!</li>
-			<li>14.dec.23 - doqmeat homepage v3 is now live! + <a href="/music/listening-log/2023/12.html#3">listening log</a> + <a href="/notebook/archive/homepage/index.html">homepage archive</a> :) rest well v2 + changed up <a href="/">landing</a> as well!</li>
-			<li>11.dec.23 - <a href="/vgs">gaming log</a> + new featured cat <img src="/!g/pix/cat-tail.gif" alt=""></li>
-			<li>08.dec.23 - <a href="/journal">journal log</a> + <a title="i bought more stamps and got a notebook of tomie depaola ones. they're very cute!" href="/collection/mail-stamps">mail stamp</a> + <a title="added scans for yeule's serotonin II" href="/music/cds">CDs</a></li>
-			<li>05.dec.23 - new <a title="lexie liu's delulu" href="/music/listening-log/2023/12.html#2">listening log</a></li>
-			<li>02.dec.23 - new pic in <a href="photobook/index.html">photobook</a> + <a href="journal/2023/12.html">journal log</a></li>
-			<li>01.dec.23 - created december <a title="yukika's timelapse" href="/music/listening-log/2023/12.html#1">listening log</a> + website now deploys from <a href="https://github.com/doqmeat/website" target="_blank" class="outlink">github!</a> + <a href="/music">featured song &amp; album</a></li>
 		</div>
 
 		<div id="featured-cat" class="box">
