changed featured page in homepage
+ changed some stuff in the homepage css

--- a/website/home.html
+++ b/website/home.html
@@ -246,7 +246,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="featured-page" class="box">
 			<h2>featured page</h2>
-			<a title="take me there!" href="/music/cds.html"><img src="!g/cds.jpg"></a>
+			<a title="take me there!" href="/music/recaps/2023/index.html"><img src="!g/recap.jpg"></a>
 		</div>
 
 		<div id="widget" class="box">
