updating button wall!

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -95,7 +95,6 @@
 			<a title="mari - cute and silly" href="https://cardcaptors.neocities.org" target="_blank"><img src="!g/cardcaptors.gif" alt="cardcaptors!"></a>
 			<a title="avery - soft and cozy blog" href="https://isopodz.neocities.org" target="_blank"><img src="https://isopodz.neocities.org/buttons/littleguybutton.jpg" alt="isopodz"></a>
 			<a title="jude - love the video game pages!! very creative way of logging them :)" href="https://blackwater.neocities.org/" target="_blank"><img src="https://blackwater.neocities.org/img/banner2.gif"></a>
-			<a title="benrey - love the shrines" href="https://lamorte.neocities.org" target="_blank"><img src="!g/lamorte.gif"></a>
 			<a title="harley - very simple but cute blog!" href="https://cherrycloudchiffon.neocities.org" target="_blank"><img src="!g/cherrycloudchiffon.png"></a>
 			<a title="hues - really like their wardrobe page!" href="https://sillytime.neocities.org" target="_blank"><img src="!g/sillytime.png"></a>
 			<a title="mei - cool site with lots to see! " href="https://meixins.neocities.org" target="_blank"><img src="!g/meixins.gif"></a>
@@ -127,50 +126,46 @@
 			<a title="shiraru" href="https://shiraru.neocities.org/" target="_blank"><img src="!g/shiraru.PNG"></a>
 			<a title="lana - a personal site that is in portuguese but that won't stop me from enjoying it!! i can somewhat read it a lil bit but either way i just love how this site looks! and the stuff they write (despite me using a translator) is very interesting!" href="https://porce-lana.blogspot.com/" target="_blank"><img src="!g/porcelana.png"></a>
 			<a title="eyes emoji" href="https://the0bserver.neocities.org/" target="_blank"><img src="!g/the0bserver.png" alt="the0bserver"></a>
-			<a title="lostletters - lovely site and very accessible!" href="https://lostletters.neocities.org" target="_blank"><img src="!g/lostletters.gif"></a>
-			<a title="soupie" href="https://soupie.neocities.org" target="_blank"><img src="!g/soupie.png"></a>
-			<a title="luna" href="https://pixelmoondust.neocities.org/" target="_blank"><img src="!g/pixelmoondust.gif"></a>
-			<a title="solaria - features very helpful guides including accessibility ones + rainbows!!" href="https://solaria.neocities.org" target="_blank"><img src="!g/solaria.gif"></a>
-			<a title="trinity" href="https://trinityexe.neocities.org/" target="_blank"><img src="!g/trinityexe.gif"></a>
-			<a title="joisu" href="https://twicethepixels.neocities.org/" target="_blank"><img src="https://twicethepixels.neocities.org/site_images/TwiceThePixels-AniBanner-88x31-Hamtaro.gif"></a>
-			<a title="nimravidae" href="https://nimravidae.neocities.org" target="_blank"><img src="!g/nimravidae.gif"></a>
-			<a title="lea" href="https://snails.neocities.org/" target="_blank"><img src="!g/snails.gif"></a>
-			<a title="lapin" href="https://loves1ck.neocities.org/" target="_blank"><img src="!g/lovesick.png"></a>
-			<a title="donna" href="https://ancientangel333.neocities.org/" target="_blank"><img src="!g/ancientangel333.png"></a>
+			<a title="lostletters - lovely site and very accessible! i love their blogs" href="https://lostletters.neocities.org" target="_blank"><img src="!g/lostletters.gif" alt="lostletters"></a>
+			<a title="soupie - layout of this site resembles a very cozy desktop :3" href="https://soupie.neocities.org" target="_blank"><img src="!g/soupie.png" alt="soupie"></a>
+			<a title="luna - site with a ton of materials!! also i just love the look of this, its so nostalgic!" href="https://pixelmoondust.neocities.org/" target="_blank"><img src="!g/pixelmoondust.gif" alt="pixelmoondust"></a>
+			<a title="solaria - features very helpful guides including accessibility ones + rainbows!!" href="https://solaria.neocities.org" target="_blank"><img src="!g/solaria.gif" alt="solaria"></a>
+			<a title="trinity - love the joe pera shrine the most!" href="https://trinityexe.neocities.org/" target="_blank"><img src="!g/trinityexe.gif" alt="trinity.exe"></a>
+			<a title="nimravidae - cozy site, i love the green tones!" href="https://nimravidae.neocities.org" target="_blank"><img src="!g/nimravidae.gif"></a>
+			<a title="lea - all about snails!" href="https://snails.neocities.org/" target="_blank"><img src="!g/snails.gif"></a>
+			<a title="lapin - a major inspiration for me! their site is lovely and filled with so many things!" href="https://loves1ck.neocities.org/" target="_blank"><img src="!g/lovesick.png"></a>
+			<a title="donna - SO CHARMINGG ^-^ i need to follow one of their cooking recipes someday!" href="https://ancientangel333.neocities.org/" target="_blank"><img src="!g/ancientangel333.png"></a>
 			<a title="olivia" href="https://egoisthye.neocities.org/" target="_blank"><img src="!g/egoisthye.png"></a>
-			<a title="lav & val" href="https://justfluffingaround.neocities.org/" target="_blank"><img src="!g/justfluffingaround.png"></a>
-			<a title="jamie" href="https://shinyexe.neocities.org/" target="_blank"><img src="!g/shinyexe.gif"></a>
-			<a title="pom" href="https://pomelo.lol/" target="_blank"><img src="!g/pomelo.gif"></a>
-			<a title="Becki" href="https://sakuradreams.neocities.org" target="_blank"><img src="!g/SakuraDreams.gif"></a>
-			<a title="scout" href="https://scootarooni.neocities.org/" target="_blank"><img src="!g/scootarooni.png"></a>
-			<a title="noah" href="https://scarecrowkid.net/" target="_blank"><img src="!g/scarecrowkid.gif"></a>
-			<a title="bee" href="https://fatgrrlz.neocities.org/" target="_blank"><img src="!g/fatgrrlz.gif"></a>
-			<a title="astro" href="https://interstellar-shipwreck.neocities.org/" target="_blank"><img src="!g/interstellar-shipwreck.png"></a>
-			<a title="rem" href="https://remiku.neocities.org" target="_blank"><img src="!g/remiku.png"></a>
-			<a title="mezu" href="https://mezucore.neocities.org/" target="_blank"><img src="!g/mezucore.png"></a>
-			<a title="bon" href="https://bondiaries.neocities.org" target="_blank"><img src="!g/bondiaries.png"></a>
+			<a title="lav & val - love their resources links!" href="https://justfluffingaround.neocities.org/" target="_blank"><img src="!g/justfluffingaround.png"></a>
+			<a title="jamie - fun little personal sie" href="https://shinyexe.neocities.org/" target="_blank"><img src="!g/shinyexe.gif"></a>
+			<a title="pom - i cannot even express how much i love this site!!! the webmaster's fursona is so so so cute and the colors of the site are EVERYTHING. i visit this one frequently" href="https://pomelo.lol/" target="_blank"><img src="!g/pomelo.gif"></a>
+			<a title="Becki - sweet personal site with an amazing curation of internet goodies such as pixels!" href="https://sakuradreams.neocities.org" target="_blank"><img src="!g/SakuraDreams.gif"></a>
+			<a title="scout - found this site through the vocaloid webring cus they put a siinamota song as one of their favs! i like their blogs" href="https://scootarooni.neocities.org/" target="_blank"><img src="!g/scootarooni.png"></a>
+			<a title="noah - LOVELYYY and very home-y ? site!!" href="https://scarecrowkid.net/" target="_blank"><img src="!g/scarecrowkid.gif"></a>
+			<a title="bee - beautiful site and art!!! i love this a whole lot" href="https://fatgrrlz.neocities.org/" target="_blank"><img src="!g/fatgrrlz.gif"></a>
+			<a title="rem - love reading this site" href="https://remiku.neocities.org" target="_blank"><img src="!g/remiku.png"></a>
+			<a title="bon - cool site about (some) stuff i dont really get but i do love their art style!" href="https://bondiaries.neocities.org" target="_blank"><img src="!g/bondiaries.png"></a>
 			<a title="dhampyr" href="https://dhampyr.neocities.org" target="_blank"><img src="!g/dhampyr.gif"></a>
 			<a title="des - literally my doppelganger + very nice art!" href="https://des.neocities.org" target="_blank"><img src="!g/des.gif"></a>
-			<a title="2044 / goner" href="https://2044.neocities.org" target="_blank"><img src="!g/2044.gif"></a>
+			<a title="2044 / goner - super neat pixel site" href="https://2044.neocities.org" target="_blank"><img src="!g/2044.gif"></a>
 			<a title="santiago" href="https://dhampirave.neocities.org" target="_blank"><img src="!g/dhampirave.png"></a>
-			<a title="sarah" href="https://inkcaps.neocities.org" target="_blank"><img src="!g/inkcaps.gif"></a>
-			<a title="josie" href="https://cynosurestation.neocities.org/" target="_blank"><img src="!g/cynosurestation.gif"></a>
+			<a title="sarah - lovely site to be in! so full of personality!" href="https://inkcaps.neocities.org" target="_blank"><img src="!g/inkcaps.gif"></a>
+			<a title="josie - very cool site with an interesting music page + more!" href="https://cynosurestation.neocities.org/" target="_blank"><img src="!g/cynosurestation.gif"></a>
 			<a title="rosemary - amazing web design skills + there is so much to see and explore!!!! i love this site a lot" href="https://hillhouse.neocities.org/" target="_blank"><img src="!g/hillhouse.png"></a>
-			<a title="viter" href="https://durango.neocities.org/" target="_blank"><img src="!g/durango.gif"></a>
+			<a title="viter - cuteee site! i love the layouts. i've also found some cool music in here :3" href="https://durango.neocities.org/" target="_blank"><img src="!g/durango.gif"></a>
 			<a title="pumpkin-ninja" href="https://pumpkin-ninja.neocities.org/sweethome" target="_blank"><img src="!g/pumpkin-ninja.gif"></a>
 			<a href="https://buntsukim.neocities.org/" target="_blank"><img src="!g/buntsukim.jpg"></a>
-			<a title="strovi" href="https://strovi.neocities.org" target="_blank"><img src="!g/strovi.png"></a>
-			<a title="kyu" href="https://kyu.neocities.org" target="_blank"><img src="!g/kyu.gif"></a>
-			<a title="alexandra" href="https://xandra.cc/" target="_blank"><img src="!g/xandra.png"></a>
-			<a title="leviathren" href="https://leviathren.neocities.org/" target="_blank"><img src="!g/leviathren.gif"></a>
-			<a title="kengo" href="https://kengo.neocities.org/" target="_blank"><img src="!g/kengo.png"></a>
-			<a title="dreambubble" href="https://dreambubble.neocities.org/" target="_blank"><img src="!g/dreambubble.gif"></a>
-			<a title="seven" href="https://halcyyyon.neocities.org/" target="_blank"><img src="!g/halcyyyon.gif"></a>
-			<a title="surge" href="http://doubleincision.com/" target="_blank"><img src="!g/doubleincision.png"></a>
-			<a title="lostlove" href="https://lostlove.neocities.org/" target="_blank"><img src="!g/lostlove.gif"></a>
-			<a title="chione" href="https://chione.neocities.org/" target="_blank"><img src="!g/chione.png" alt="chione"></a>
+			<a title="strovi - cool art and blog" href="https://strovi.neocities.org" target="_blank"><img src="!g/strovi.png"></a>
+			<a title="kyu - their art radiates such a warm feeling on me.... idk but i really love it here" href="https://kyu.neocities.org" target="_blank"><img src="!g/kyu.gif"></a>
+			<a title="alexandra - AWESOME site with so many links and things to read!" href="https://xandra.cc/" target="_blank"><img src="!g/xandra.png"></a>
+			<a title="leviathren - very cool site. im a big enjoyer of the different themes" href="https://leviathren.neocities.org/" target="_blank"><img src="!g/leviathren.gif"></a>
+			<a title="kengo - nice and minimalistic site" href="https://kengo.neocities.org/" target="_blank"><img src="!g/kengo.png"></a>
+			<a title="dreambubble - cool site filled with pixels and interesting pages!" href="https://dreambubble.neocities.org/" target="_blank"><img src="!g/dreambubble.gif"></a>
+			<a title="seven - super charming" href="https://halcyyyon.neocities.org/" target="_blank"><img src="!g/halcyyyon.gif"></a>
+			<a title="surge - found on 32bit cafe discord server! very cool and i love the photography page" href="http://doubleincision.com/" target="_blank"><img src="!g/doubleincision.png"></a>
+			<a title="lostlove - cozy site with a nice journal" href="https://lostlove.neocities.org/" target="_blank"><img src="!g/lostlove.gif"></a>
 			<a title="aaron" href="https://applesayce.neocities.org/" target="_blank"><img src="!g/applesayce.gif" alt="applesayce"></a>
-			<a title="mapplebear - a super sweet and cozy site" href="https://maplebear.neocities.org/" target="_blank"><img src="!g/maplebear.gif" alt="maplebear"></a>
+			<a title="mapplebear - a super sweet and cozy site, i especially love their logs about fashion!" href="https://maplebear.neocities.org/" target="_blank"><img src="!g/maplebear.gif" alt="maplebear"></a>
 			<a title="nork - i love the layouts a lot. the music page is super nice as well." href="https://nork2004.neocities.org" target="_blank"><img src="!g/nork2004.png" alt="nork2004"></a>
 			<a title="a0i - LOVELY layout designs" href="https://hatsu.neocities.org/" target="_blank"><img src="!g/hatsu.png" alt="hatsu"></a>
 			<a title="frills - cool and responsive site!" href="https://frills.dev/" target="_blank"><img src="!g/frills.png" alt="frills"></a>
@@ -237,7 +232,6 @@
 			<a href="https://yuviko.neocities.org" target="_blank"><img src="!g/yuviko.gif"></a>
 			<a href="https://thehoneypot.neocities.org/" target="_blank"><img src="!g/thehoneypot.png"></a>
 			<a href="https://irony-machine.neocities.org/" target="_blank"><img src="!g/irony-machine.png"></a>
-			<a href="https://vivarism.neocities.org/" target="_blank"><img src="!g/vivarism.gif"></a>
 			<a href="https://dxcccii.neocities.org" target="_blank"><img src="https://dxcccii.neocities.org/follow_dxcccii_2.gif"></a>
 			<a title="features interesting articles and web dev resources!!! i feel like i could be here for hours and hours" href="https://neonaut.neocities.org" target="_blank"><img src="!g/neonaut.png"></a>
 			<a href="https://koinuko.neocities.org" target="_blank"><img src="!g/koinuko.gif"></a>
@@ -315,6 +309,7 @@
 			<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif"></a>
 			<a title="cute and colorful site that offers free materials!" href="https://sweetcharm.net/" target="_blank"><img src="!g/sweetcharm.gif" alt="sweetcharm"></a>
 			<a title="has cute CAT themed FC2 blog templates, materials, and lots more! they also have linked other resource sites!" href="http://tora7.ciao.jp/" target="_blank"><img src="!g/tora7.gif" alt="tora7"></a>
+			<a title="joisu - their pixels are toybox are so cute :3" href="https://twicethepixels.neocities.org/" target="_blank"><img src="https://twicethepixels.neocities.org/site_images/TwiceThePixels-AniBanner-88x31-Hamtaro.gif" alt="twicethepixels"></a>
 		</div>
 
 		<h4 id="fun">for fun!</h4>
