--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -122,6 +122,7 @@
 		<li><a href="https://solarpunk.cool/zines/web-zine-01/table-of-contents.html" target="_blank">web zine 01</a> - zine about making a website from scratch!</li>
 		<li><a href="https://javascript.info/" target="_blank">javascript.info</a> - JS tutorials</li>
 		<li><a href="http://www.javascriptkit.com/cutpastejava.shtml" target="_blank">javascriptkit</a> - JS resources and codes</li>
+		<li><a href="https://ianlunn.github.io/Hover/" target="_blank">hover.css</a> - a collection of neat CSS :hover snippets!</li>
 
 		<h3 id="sites">useful sites</h3>
 
