--- a/website/about/mini.html
+++ b/website/about/mini.html
@@ -113,6 +113,7 @@ coded with love by des
 				display: none;
 			}
 		}
+
 	</style>
 </head>
 
@@ -138,7 +139,7 @@ coded with love by des
 
 		<h2><img src="/!g/pix/catcall.gif"> other socials</h2>
 
-		<p><img src="/!g/deco/phone.gif" align="left" style="margin-right:10px;">:2: <a href="https://twitter.com/sepiarecord999">twitter</a> :2: <a href="https://twitter.com/hourlysiinamota">siinamota song bot</a> :2: <a href="https://doqmeats.tumblr.com/">tumblr</a> :2: <a href="https://letterboxd.com/Iakitu/">letterboxd</a> :2: <a href="https://www.last.fm/user/lakiitu">last.fm</a> :2: <a href="https://rateyourmusic.com/~doqmeat">rate your music</a> :2: <a href="https://steamcommunity.com/id/lakiitu/">steam</a></p>
+		<p><img src="/!g/deco/phone.gif" align="left" style="margin-right:10px;">:2: <a href="https://doqmeat.blog.fc2.com/">microblog</a> :2: <a href="https://twitter.com/hourlysiinamota">siinamota song bot</a> :2: <a href="https://doqmeats.tumblr.com/">tumblr</a> :2: <a href="https://letterboxd.com/Iakitu/">letterboxd</a> :2: <a href="https://www.last.fm/user/lakiitu">last.fm</a> :2: <a href="https://rateyourmusic.com/~doqmeat">rate your music</a></p>
 
 		<h2><img src="/!g/pix/bluemailnew.gif"> contact</h2>
 
@@ -159,6 +160,7 @@ coded with love by des
 			.replace(/:4:/g, '<img src="/!g/pix/heart1.gif" class="emoticon">')
 			.replace(/:5:/g, '<img src="/!g/pix/starpink.gif" class="emoticon">');
 		document.getElementById("box1").innerHTML = res;
+
 	</script>
 </body>
 
