updated internet stamps

--- a/website/collection/internet-stamps/index.html
+++ b/website/collection/internet-stamps/index.html
@@ -162,9 +162,11 @@ https://coolors.co/ffd3d3-58bc55-ff7e7e-ffea86
 			<img src="!g/stargazer.gif">
 			<img src="!g/DABLINKIE.gif">
 			<img src="!g/catsarepurrfect.gif">
+			<img src="!g/let-the-music-play.gif">
 			<img src="!g/blackcatslucky.gif">
 			<img src="!g/eepy.gif">
 			<img src="!g/softandwarm.webp">
+			<img src="!g/dreamy.gif">
 			<img src="!g/imbeingputdown.gif">
 			<img src="!g/luvmyputer.gif">
 			<img src="!g/shootingstar.gif">
@@ -174,17 +176,21 @@ https://coolors.co/ffd3d3-58bc55-ff7e7e-ffea86
 			<img src="!g/crying%20and%20throwing%20up.gif">
 			<img src="!g/iluvcats.gif">
 			<a href="https://shishka.neocities.org/nofollow/site-dont-blink" target="_blank"><img src="!g/viewsource.gif"></a>
+			<img src="!g/adopt-shelter-cat.gif">
 			<img src="!g/ieatedsand.gif">
 			<a title="i got it from this site but it goes to a 404 :(" href="https://madggear.neocities.org/" target="_blank"><img src="!g/loossemble-madggear.gif"></a>
 			<img src="!g/catsunny.gif">
+			<img src="!g/ice_headache.gif">
 			<img src="!g/silly-blinkie.gif">
 			<img src="!g/dowhatmakesuhappy.gif">
 			<img src="!g/ilovethemusic.gif">
 			<a href="https://skelenbyneocities.tumblr.com/post/700308803212722176/yknow" target="_blank"><img src="!g/like-nya-skelenbyneocities.gif"></a>
 			<img src="!g/cringe.gif">
+			<img src="!g/birdapp.gif">
 			<a href="https://shishka.neocities.org/nofollow/site-dont-blink" target="_blank"><img src="!g/blockads.gif"></a>
 			<img src="!g/mikuplsinteract.gif">
 			<img src="!g/lovipod.gif">
+			<img src="!g/cat-napping.gif">
 			<img src="!g/dontlikedontread.gif">
 			<img src="!g/fightingdepression.gif">
 			<a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="!g/polygonwave2.gif"></a>
