added pixels to graphics

--- a/website/notebook/sitely/graphics.html
+++ b/website/notebook/sitely/graphics.html
@@ -121,6 +121,7 @@
 		<img src="/!g/pix/cat-tail.gif">
 		<img src="/!g/pix/kittypink.gif">
 		<img src="/!g/pix/cat-music.gif">
+		<img src="/!g/pix/dumy.gif">
 
 		<br><!-- irregular size -->
 		<img src="/!g/deco/meowsleepu.gif">
@@ -211,7 +212,6 @@
 		<img src="/!g/pix/doggy.gif">
 		<img src="/!g/pix/ghost.gif">
 		<img src="/!g/pix/plant2.gif">
-		<img src="/!g/pix/hello.gif">
 		<img src="/!g/pix/heart-paper.gif">
 		<img src="/!g/pix/rose.gif">
 		<img src="/!g/pix/shrines.gif">
@@ -238,6 +238,7 @@
 		<img src="/!g/pix/music%20notes.gif">
 		<img src="/!g/pix/musicnote.gif">
 		<img src="/!g/pix/beat.gif">
+		<img src="/!g/pix/beat-stop.png">
 		<img src="/!g/pix/nyancat.gif">
 		<img src="/!g/pix/apple.gif">
 		<img src="/!g/pix/cherry.gif">
@@ -294,6 +295,10 @@
 		<img src="/!g/pix/rilakkuma.gif">
 		<img src="/!g/pix/ghost1.gif">
 		<img src="/!g/pix/pics.gif">
+		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/pix/tora-clover.gif"></a>
+		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/pix/tora-cat-holdingflower.gif"></a>
+		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/pix/tora-cat-holdingsunflower.gif"></a>
+		<img src="/!g/pix/sticky.gif">
 
 		<h3 id="tiny">tinnier</h3>
 
@@ -363,6 +368,8 @@
 		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/icon_k_gyo.gif"></a>
 		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/music-note-sozaiya.gif"></a>
 		<a title="sozaiya405" href="http://sozaiya405.chu.jp/" target="_blank"><img src="/!g/pix/music-note2-sozaiya.gif"></a>
+		<img src="/!g/pix/hello.gif">
+		<img src="/!g/pix/crismas.gif">
 
 		<h3>site icons</h3>
 
