minor changes / fixes

--- a/website/journal/credit.html
+++ b/website/journal/credit.html
@@ -18,6 +18,7 @@
 	<p>gif on right side from hit video game/visual novel <i>if found...</i> / <a href="https://store.steampowered.com/app/1041920/If_Found/" target="_blank">steam page</a></p>
 	<p>washi tape, blank bookmark from <a href="https://foollovers.com/" target="_blank">foollovers.com</a></p>
 	<p>calendar iframe from <a href="http://calendar-muryou.com/blog.html" target="_blank">calendar-muryou</a></p>
+	<p>pencil cursor from <a href="https://www.cursors-4u.com/" target="_blank">cursors-4u</a></p>
 </body>
 
 </html>
