--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -204,7 +204,7 @@
 
 		<a href="/notebook/F2U/templates" target="_blank">templates made by me!</a> /
 		<a href="https://neothemes.neocities.org/layouts/" target="_blank">neothemes</a> /
-		<a href="https://windchime.neocities.org/fountain/air/templates" target="_blank">windchime</a> /
+		<a href="https://windchime.neocities.org/fountain/air/templates" target="_blank">windchime</a> / <a href="https://github.com/francelalune/neocities_layouts/tree/main" target="_blank">francelalune</a> / 
 		<a title="templaterr" href="https://templaterr.neocities.org" target="_blank">templaterr</a> /
 		<a href="https://repth.neocities.org/theme" target="_blank">REPTH</a> /
 		<a href="https://teppyslayouts.neocities.org" target="_blank">teppy</a> /
