--- a/website/notebook/sitely/to-dos.html
+++ b/website/notebook/sitely/to-dos.html
@@ -40,7 +40,9 @@
 		</p>
 
 		<h3>bugs</h3>
-		<li class="dot">journal iframe not appearing on some viewports? / <a href="https://github.com/doqmeat/doqmeat.neocities.org/issues/4" target="_blank" class="outlink">github issue</a></li>
+		<ul>
+			<li class="dot">journal iframe not appearing on some viewports? / <a href="https://github.com/doqmeat/doqmeat.neocities.org/issues/4" target="_blank" class="outlink">github issue</a></li>
+		</ul>
 
 		<h3>personal</h3>
 		<ul>
@@ -56,7 +58,7 @@
 		<h3>music</h3>
 		<ul>
 			<li class="yes">fix formatting of <a href="/music/recaps/2022.html" target="_blank">2022 music recap</a></li>
-			<li class="dot">write 2023 music recap</li>
+			<li class="yes">write <a href="/music/recaps/2023/index.html" target="_blank">2023 music recap</a></li>
 			<li class="no">fav music videos - w/ gifs and comments</li>
 			<li class="no">kpop photocard gallery - i dont collect them but i think it would be cool to display the ones i have</li>
 			<li class="no">re-do star pixels for rating listening logs</li>
@@ -110,12 +112,11 @@
 		<h3>other</h3>
 		<ul>
 			<li class="no">revamp <a href="https://status.cafe/users/doqmeat" target="_blank">status.cafe</a> CSS</li>
-			<li class="no">make <a href="https://doqmeat.blog.fc2.com" target="_blank">FC2 microblog</a> template responsive</li>
+			<li class="yes">make <a href="https://doqmeat.blog.fc2.com" target="_blank">FC2 microblog</a> template responsive</li>
 			<li class="no">re-do <a href="/webgarden/greenhouse.html" target="_blank">webgarden pot</a></li>
-			<li class="no">update counter imgs</li>
 			<li class="no">webmentions? </li>
 		</ul>
-		<p>last updated on 04.dec.23</p>
+		<p>last updated on 05.jan.24</p>
 	</div>
 </body>
 
