--- a/website/notebook/links/credit.html
+++ b/website/notebook/links/credit.html
@@ -45,6 +45,8 @@
 
 		<h2 id="home">homepage v3 credits</h2>
 		<li>most pixels were found from pixel collection pages. i'd love to find the sources for each of them so i can give proper credit so if any one knows, please e-mail me!</li>
+		<li><a href="https://www.tumblr.com/compassionately/688695677850714112/1999-neocities-layout-by-me-emotion-preview?source=share" target="_blank">js audio button</a> code from this template!</li>
+		<li><a href="https://codepen.io/sadness97/pen/mdOXzNW" target="_blank">falling items</a> code</li>
 		<li><a href="https://stackoverflow.com/questions/16354122/how-to-put-scrolling-text-in-title-tag" target="_blank">scrolling title tag</a></li>
 		<li><a href="https://www.w3schools.com/howto/howto_js_draggable.asp" target="_blank">draggable js code</a> for minecraft cat plush :3</li>
 		<li><a href="https://www.geeksforgeeks.org/how-to-switch-between-multiple-css-stylesheets-using-javascript/" target="_blank">theme switcher js</a></li>
@@ -54,11 +56,11 @@
 		<h3>flower.css</h3>
 		<li>a lot of graphics are from these sites: <img src="/!g/deco/yellowbutteer.gif" alt=""> <img src="/!g/pix/sorahana-beebig2.gif"> <a href="https://sorahana.ciao.jp/" target="_blank">sorahana</a>, <img src="/!g/pix/1leaf.png"> <a href="https://sleepysprout.neocities.org/" target="_blank">sleepysprout</a></li>
 		<li>patterned bgs from <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a></li>
-		<li><a href="/notebook/links/fonts.html">fonts</a>used in this page are: typo garden, gaegu, spirit, morningtea, nintendo ds bios, simple</li>
+		<li><a href="/notebook/links/fonts.html">fonts</a> used in this page are: typo garden, gaegu, spirit, morningtea, nintendo ds bios, simple</li>
 		<li>body background by <a href="https://unsplash.com/photos/grass-field-at-daytime-PEm_sLmJT-w" target="_blank">Rodion Kutsaiev</a> from unsplash</li>
 
 		<h3>space.css (wip!)</h3>
-		<li>background by <a href="https://pixelins.tumblr.com/post/100938645642/okay-i-just-really-love-space-here-are-some-tile" target="_blank">pixelins</a></li>
+		<li>body background by <a href="https://pixelins.tumblr.com/post/100938645642/okay-i-just-really-love-space-here-are-some-tile" target="_blank">pixelins</a></li>
 
 	</div>
 </body>
