--- a/website/home.html
+++ b/website/home.html
@@ -119,25 +119,26 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/fortnite">fortnite</a>, <a href="/vgs/fashion-dreamer/">fashion dreamer</a>, <a href="/vgs/dog-island">the dog island</a></p>
+			<p><span class="hl">playing:</span> <a href="/vgs/fashion-dreamer/">fashion dreamer</a>, <a href="/vgs/dog-island">the dog island</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
-				fujimoto, <i>villain</i> by fujita</p>
-			<p><span class="hl">watching:</span> the tatami galaxi</p>
+				fujimoto</p>
+			<p><span class="hl">watching:</span> the tatami galaxy</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> getting into college again!</p>
-			<p><span class="hl">coding:</span> 2023 music recap :3</p>
-			<p class="date">last updated on 15.dec.23</p>
+			<p><span class="hl">working on:</span> florida trip journal log + college</p>
+			<p><span class="hl">coding:</span> - </p>
+			<p class="date">last updated on 05.jan.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>05.jan.24 - <a href="/journal">journal log:</a> back home! + new featured cat</li>
 			<li>25.dec.23 - finished my <a href="music/recaps/2023/index.html">music recap</a> of the year! this will be my last update of the year! happy holidays everyone <img src="!g/pix/crismas.gif" alt=""></li>
 			<li>22.dec.23 - <a href="/journal">journal log</a></li>
 		</div>
 
 		<div id="featured-cat" class="box">
 			<h2>featured cat</h2>
-			<a title="wait....... im jolly?!??!" href="/collection/cats/!g/wait-im-jolly.jpeg" target="_blank"><img src="/collection/cats/!g/wait-im-jolly.jpeg" width="90%"></a>
+			<a href="/collection/cats/!g/whoops.jpeg" target="_blank"><img src="/collection/cats/!g/whoops.jpeg" width="90%" alt="featured cat"></a>
 		</div>
 
 		<div id="listing" class="box">
@@ -186,21 +187,17 @@ feel free to look around :) just don't be THAT person and take the entire code f
 		<div id="webrings" class="box">
 			<h2>webrings &amp; widgets</h2>
 
-			<!--		WEB GUARDIAN -->
-			<div class="results" style="width: 200px;background-color: #fff;color: #000;padding: 10px;border: 1px solid;margin: 0 auto;font-size: '15pt';">
-				<p style="margin: 0">This page is protected by a</p>
-				<h2 class="title" style="margin: 0">OWL</h2>
-				<img class="image" style="max-width: 160px;border: 1px solid" alt="OWL" src="https://i.ibb.co/MSGxtwm/owl.jpg">
-				<p class="description">A group of owls is called a parliament.</p>
-				<small>
-					<a href="https://hekate.neocities.org">Want your own? Visit hekate.neocities.org!</a>
-				</small>
+			<!-- wiiring -->
+			<div style="width:150px;margin:auto;">
+				<script src="https://jeith.neocities.org/assets/webring/wii-ring.js"></script>
+				<wii-ring site="https://doqmeat.neocities.org"></wii-ring>
 			</div>
 
-			<!-- neo creatives -->
-			<div id="ncring">
-				<script type="text/javascript" src="https://neocreatives.neocities.org/onionring-variables.js"></script>
-				<script type="text/javascript" src="https://neocreatives.neocities.org/onionring-widget.js"></script>
+			<!--  vocaloid webring -->
+			<div id="vocaring">
+				<script type="text/javascript" src="https://adilene.net/webring/webring-variables.js"></script>
+				<script type="text/javascript" src="https://adilene.net/webring/webring-widget.js"></script>
+				<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
 			</div>
 
 			<!-- mob psycho 100 / mp100 webring -->
@@ -218,17 +215,21 @@ feel free to look around :) just don't be THAT person and take the entire code f
 				<script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-widget.js"></script>
 			</div>
 
-			<!-- wiiring -->
-			<div style="width:150px;margin:auto;">
-				<script src="https://jeith.neocities.org/assets/webring/wii-ring.js"></script>
-				<wii-ring site="https://doqmeat.neocities.org"></wii-ring>
+			<!-- neo creatives -->
+			<div id="ncring">
+				<script type="text/javascript" src="https://neocreatives.neocities.org/onionring-variables.js"></script>
+				<script type="text/javascript" src="https://neocreatives.neocities.org/onionring-widget.js"></script>
 			</div>
 
-			<!--  vocaloid webring -->
-			<div id="vocaring">
-				<script type="text/javascript" src="https://adilene.net/webring/webring-variables.js"></script>
-				<script type="text/javascript" src="https://adilene.net/webring/webring-widget.js"></script>
-				<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
+			<!--		WEB GUARDIAN -->
+			<div class="results" style="width: 200px;background-color: #fff;color: #000;padding: 10px;border: 1px solid;margin: 0 auto;font-size: '15pt';">
+				<p style="margin: 0">This page is protected by a</p>
+				<h2 class="title" style="margin: 0">OWL</h2>
+				<img class="image" style="max-width: 160px;border: 1px solid" alt="OWL" src="https://i.ibb.co/MSGxtwm/owl.jpg">
+				<p class="description">A group of owls is called a parliament.</p>
+				<small>
+					<a href="https://hekate.neocities.org">Want your own? Visit hekate.neocities.org!</a>
+				</small>
 			</div>
 
 			<!-- melonland surf -->
