--- a/website/home.html
+++ b/website/home.html
@@ -94,7 +94,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 			<p>this website will probably be an <a title="to-do list!" href="/notebook/sitely/to-dos.html">endless work-in-progress</a> for quite a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache clean should help! if not, then feel free to e-mail me.</p>
 
-			<center><img src="/collection/internet-stamps/!g/timecat.png" alt="button that reads 'no time spent with a cat is wasted'" width="30%"></center>
+			<center><a href="https://user.xmission.com/~emailbox/catstuff.htm" title="img source!"><img src="/collection/internet-stamps/!g/timecat.png" alt="button that reads 'no time spent with a cat is wasted'" width="30%"></a></center>
 
 			<h4>notes:</h4>
 			<li>recommended to view on a 1536+px wide screen.</li>
