button wall update

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -176,6 +176,8 @@
 			<a title="cuteee" href="https://mypillowfort.neocities.org/" target="_blank"><img src="!g/mypillowfort.jpeg" alt="mypillowfort"></a>
 			<a title="marcika - awesome little site who's youtube channel is very charming to watch! also love the webmaster's cat!" href="https://marcika.club/" target="_blank"><img src="!g/marcika.club.gif" alt="marcika.club"></a>
 			<a title="pp - i love their oc" href="https://churupan.neocities.org/" target="_blank"><img src="!g/churupan.gif" alt="churupan"></a>
+			<a title="dryad - cozy site" href="https://cyberneticdryad.neocities.org/" target="_blank"><img src="!g/cyberneticdryad.gif" alt="cyberneticdryad"></a>
+			<a title="telle - nice site with interesting logs!" href="https://catcakes.neocities.org/" target="_blank"><img src="!g/catcakes.gif" alt="catcakes" </a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
@@ -274,7 +276,7 @@
 			<a title="32.bit cafe" href="https://www.32bit.cafe/" target="_blank"><img src="!g/32bit-cafe.png" alt="32.bit cafe"></a>
 		</div>
 
-		<h4 id="resources">resources</h4>
+		<h4 id="resources">resources / graphics</h4>
 		<div id="resources" class="neo">
 			<a title="has an INSANE library of free and CUTE stuff you can use on your site! from bgs, pixels, bullets, layouts, etc!" href="https://foollovers.com" target="_blank"><img src="!g/foolloversbanner.gif"></a>
 			<a title="an archive by cinni where they archive old websites! very good for finding previously lost graphics!" href="https://archive.cinni.net/index.php" target="_blank"><img src="!g/cutiearchive.gif"></a>
@@ -310,6 +312,7 @@
 			<a title="cute and colorful site that offers free materials!" href="https://sweetcharm.net/" target="_blank"><img src="!g/sweetcharm.gif" alt="sweetcharm"></a>
 			<a title="has cute CAT themed FC2 blog templates, materials, and lots more! they also have linked other resource sites!" href="http://tora7.ciao.jp/" target="_blank"><img src="!g/tora7.gif" alt="tora7"></a>
 			<a title="joisu - their pixels are toybox are so cute :3" href="https://twicethepixels.neocities.org/" target="_blank"><img src="https://twicethepixels.neocities.org/site_images/TwiceThePixels-AniBanner-88x31-Hamtaro.gif" alt="twicethepixels"></a>
+			<a href="catstuff" href="https://user.xmission.com/~emailbox/catstuff.htm" target="_blank"><img src="!g/catstuff-xmission.gif"></a>
 		</div>
 
 		<h4 id="fun">for fun!</h4>
