updated music index
added a RSS widget for RYM

--- a/website/music/index.html
+++ b/website/music/index.html
@@ -29,6 +29,8 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
+				<b>06.jan.24</b> - added a RSS widget of my RYM account to this page!
+				/
 				<b>25.dec.23</b> - my <a href="recaps/2023/index.html">2023 recap</a> is out now! ヾ(≧ ▽ ≦)ゝ
 			</marquee>
 		</div>
@@ -115,6 +117,10 @@
 			<!-- 		img2 end div -->
 		</div>
 		<div id="last" class="box">
+			<!--	RYM RSS-->
+			<h4>doqmeat's RYM feed</h4>
+			<script src="//rss.bloople.net/?url=https%3A%2F%2Frateyourmusic.com%2F~doqmeat%2Fdata%2Frss&detail=-1&limit=6&showtitle=false&type=js"></script>
+
 			<h4>listening to...</h4>
 			<a href="https://www.last.fm/user/lakiitu" target="_blank"><img src="https://lastfm-recently-played.vercel.app/api?user=lakiitu" height="auto" width="90%" /></a>
 		</div>
@@ -130,7 +136,7 @@
 		</div>
 
 		<footer>
-			last updated on 25.dec.23
+			last updated on 06.jan.23
 			<br>
 
 			<b>credit:</b> <a href="https://forums.htmlhelp.com/index.php?showtopic=18694" target="_blank">random img JS code</a> used for the "ads" <span class="emoji1"></span>
